[project]
name = "htmtex"
version = "0.0.1"
authors = [
  { name="B. Chabiene", email="chabiene.bilal@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LumisDev/htmtex"
Issues = "https://github.com/LumisDev/htmtex/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"